[gd_scene load_steps=20 format=3 uid="uid://brvi154es6nte"]

[ext_resource type="Script" uid="uid://xnlxdrrtx053" path="res://ESCENAS/Enemies/enemie.gd" id="1_aj5sh"]
[ext_resource type="Script" uid="uid://dycaxeavyv8vq" path="res://ESCENAS/Player/Scripts/movement.gd" id="2_l3eiy"]
[ext_resource type="PackedScene" uid="uid://c01qe055ua4od" path="res://ESCENAS/Components/hitbox_component.tscn" id="2_reo8f"]
[ext_resource type="Texture2D" uid="uid://cs3v232614pf7" path="res://ASSETS/TileSets/TileSet-ChemestryValley/Enemies/Boar/Walk/Walk-Base-Sheet.png" id="3_1e8lb"]
[ext_resource type="PackedScene" uid="uid://dhbitao04ex5s" path="res://ESCENAS/Components/HealthComponent.tscn" id="4_l3eiy"]
[ext_resource type="PackedScene" uid="uid://dw0k4rkx1owu3" path="res://ESCENAS/Components/SensorComponent.tscn" id="6_u8cy3"]
[ext_resource type="Script" uid="uid://dqvm7g8t631wp" path="res://ESCENAS/Enemies/scripts/health_bar.gd" id="7_7mcgd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1e8lb"]
atlas = ExtResource("3_1e8lb")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev2gw"]
atlas = ExtResource("3_1e8lb")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6mw7"]
atlas = ExtResource("3_1e8lb")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1cm2"]
atlas = ExtResource("3_1e8lb")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tjbh"]
atlas = ExtResource("3_1e8lb")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5y1s"]
atlas = ExtResource("3_1e8lb")
region = Rect2(240, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7beo7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev2gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6mw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1cm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tjbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5y1s")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_reo8f"]
radius = 16.0312

[sub_resource type="Gradient" id="Gradient_7mcgd"]
colors = PackedColorArray(0.243137, 0.243137, 0.243137, 1, 0.243137, 0.243137, 0.243137, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7mcgd"]
gradient = SubResource("Gradient_7mcgd")
width = 40
height = 6

[sub_resource type="Gradient" id="Gradient_1e8lb"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ev2gw"]
gradient = SubResource("Gradient_1e8lb")
width = 40
height = 6

[node name="Enemie" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_aj5sh")

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
sprite_frames = SubResource("SpriteFrames_7beo7")
animation = &"Walk"
autoplay = "Walk"
frame_progress = 0.328377

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 0
shape = SubResource("CircleShape2D_reo8f")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(12, 14)
scale = Vector2(0.535954, 0.863079)
target_position = Vector2(0, 26)
collision_mask = 2

[node name="Movement" type="Node2D" parent="."]
position = Vector2(-2, 34)
script = ExtResource("2_l3eiy")
speed = 100.0

[node name="HitbosComponent" parent="." instance=ExtResource("2_reo8f")]
position = Vector2(-9, 6)
collision_mask = 1

[node name="HealthComponent" parent="." instance=ExtResource("4_l3eiy")]
position = Vector2(0, 0)
collision_layer = 4

[node name="SensorComponent" parent="." instance=ExtResource("6_u8cy3")]

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
texture_under = SubResource("GradientTexture2D_7mcgd")
texture_progress = SubResource("GradientTexture2D_ev2gw")
tint_progress = Color(0.883679, 0, 0.0514797, 1)
script = ExtResource("7_7mcgd")

[connection signal="body_entered" from="SensorComponent" to="." method="_on_sensor_component_body_entered"]
[connection signal="body_exited" from="SensorComponent" to="." method="_on_sensor_component_body_exited"]
